2008-02-28  Tobias C. Rittweiler <tcr@freebits.de>

	* swank.lisp (find-definition-for-thing): New DEFSLIMEFUN.

	* swank-backend (find-source-location): New DEFINTERFACE.

	* swank-sbcl (find-source-location): Implement it.

	* slime.el (slime-edit-definition-cont): Use `slime-length='.

2008-02-28  Tobias C. Rittweiler  <tcr@freebits.de>

	Fix regressions in the `find-definition' test case on SBCL:

	M-. on e.g. SWANK::READ-FROM-EMACS would bring the user to

	  (|defun read-from-emacs ...)

	and not

	  |(defun read-from-emacs ...)
	
	* swank-sbcl.lisp (source-file-position): Don't 1+ the returned
	position; i.e. return a position usable as a CL /file position/
	which start from 0, and not a position usable in Emacs where
	buffer points start from 1. This is important because the return
	value is passed to SWANK-BACKEND::READ-SNIPPET which invokes
	CL:FILE-POSITION on it.
	(make-definition-source-location): Adapted to 1+ the position
	passed to Emacs, to reflect above change.

2008-02-25  Helmut Eller  <heller@common-lisp.net>

	Make it easier to prepare core-files.

	* swank-loader.lisp (init): Two new keyword args: :SETUP and
	:LOAD-CONTRIBS.  :SETUP=nil can be used to suppress init hooks and
	loading user init files.

	* swank.asd: Call swank-loader:init with :SETUP=nil.

	* swank.lisp (init-global-stream-redirection): Guard against
	redirecting already redirected streams.

2008-02-24  Helmut Eller  <heller@common-lisp.net>

	Work harder to avoid wrong guesses for slime-repl-set-package.

	* slime.el (slime-repl-set-package): Use slime-pretty-package-name
	to strip double quotes from slime-current-package before comparing
	it with slime-lisp-package.  Still doesn't deal with nicknames and
	other reader tricks.

2008-02-23  Ariel Badichi <abadichi@bezeqint.net>

	Allow ED-IN-EMACS to edit new files.

	* swank.lisp (ed-in-emacs): Accept non-existing files.
	(canonicalize-filename): Merged into ed-in-emacs.
