@@ -1,3 +1,10 @@
+2008-03-02  Tobias C. Rittweiler <tcr@freebits.de>
+
+	* slime.el (slime-edit-definition-hooks): This variable can be
+	used to hook into the M-. machinery.
+	(slime-edit-definition): Run above hooks until one succeeds. By
+	default, try to find a definition for the symbol at point.
+
 2008-02-28  Tobias C. Rittweiler <tcr@freebits.de>
 
 	* swank.lisp (find-definition-for-thing): New DEFSLIMEFUN.
